# litellm-rs

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CapabilityMatrix.md  Cargo.toml  DEVELOPMENT.md  LM Studio API.md  README.md  RELEASE.md  SECURITY.md  build.rs  llms.txt  mkdocs.yml
.claude/commands/: review-pr.md
examples/: 01_simple_chat.rs  02_streaming_chat.rs  03_tool_calling.rs  04_structured_output.rs  05_vision_chat.rs  06_scientific_audit.rs  07_mcp_orchestration.rs  08_bifrost_governance.rs  09_terminal_chat.rs
specs/: anthropic.json  openai.yaml
src/: client.rs  lib.rs  main.rs  models.rs  provisioner.rs  response_handler.rs  translator.rs
tests/: README.md
tests/common/: mod.rs
tests/e2e/: chat_completion_test.rs  cloud_test.rs
tests/integration/: integration_test.rs
tests/unit/: models_test.rs
